# cpp-projects

./: .gitignore  CMakeLists.txt  main.cpp
data/: sample_logs.txt
devToolProject/: CMakeLists.txt  main.cpp
devToolProject/data/: sample_logs.txt
devToolProject/include/: LogAnalyser.h  LogEntry.h  LogParser.h  ParseResult.h
devToolProject/src/: LogAnalyser.cpp  LogParser.cpp
deviceManager/: CMakeLists.txt  main.cpp
deviceManager/builds/: test_build.pkg
deviceManager/data/: devices.txt
deviceManager/include/: Device.h  DeviceManager.h  DeviceStatus.h  IDeviceClient.h  OperationResult.h  SimulatedDeviceClient.h
deviceManager/src/: DeviceManager.cpp  DeviceStatus.cpp  SimulatedDeviceClient.cpp
include/: FileLogSource.h  ILogSource.h  LogAnalyser.h
src/: FileLogSource.cpp  LogAnalyser.cpp
